{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 85,
  "lineage": "ebd8cf07-8487-ece5-17ff-226dc30cab4b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cxy-terraform-igw-section",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:327143400501:internet-gateway/igw-0e7e7db0f33207632",
            "id": "igw-0e7e7db0f33207632",
            "owner_id": "327143400501",
            "tags": {
              "Name": "cxy-terraform-igw-name"
            },
            "tags_all": {
              "Name": "cxy-terraform-igw-name"
            },
            "vpc_id": "vpc-0d9e8bab19d046da1"
          },
          "dependencies": [
            "aws_vpc.cxy-terraform-vpc-section"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cxy-terraform-private-routetable-section",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:327143400501:route-table/rtb-0b0b745af1ff3711e",
            "id": "rtb-0b0b745af1ff3711e",
            "owner_id": "327143400501",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cxy-terraform-private-subnet-routetable-name"
            },
            "tags_all": {
              "Name": "cxy-terraform-private-subnet-routetable-name"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9e8bab19d046da1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cxy-terraform-vpc-section"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cxy-terraform-public-routetable-section",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:327143400501:route-table/rtb-011e628a905573666",
            "id": "rtb-011e628a905573666",
            "owner_id": "327143400501",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e7e7db0f33207632",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cxy-terraform-public-subnet-routetable-name"
            },
            "tags_all": {
              "Name": "cxy-terraform-public-subnet-routetable-name"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9e8bab19d046da1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cxy-terraform-igw-section",
            "aws_vpc.cxy-terraform-vpc-section"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-private-routetable-associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0200433391fbd18fd",
            "route_table_id": "rtb-0b0b745af1ff3711e",
            "subnet_id": "subnet-0b0fd2645d7019ada"
          },
          "dependencies": [
            "aws_route_table.cxy-terraform-private-routetable-section",
            "aws_subnet.cxy-terraform-private-subnet-section",
            "aws_vpc.cxy-terraform-vpc-section"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-public-routetable-associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a81a701e433fb59",
            "route_table_id": "rtb-011e628a905573666",
            "subnet_id": "subnet-0ef32ede3852f737f"
          },
          "dependencies": [
            "aws_internet_gateway.cxy-terraform-igw-section",
            "aws_route_table.cxy-terraform-public-routetable-section",
            "aws_subnet.cxy-terraform-public-subnet-section",
            "aws_vpc.cxy-terraform-vpc-section"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cxy-terraform-private-subnet-section",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:327143400501:subnet/subnet-0b0fd2645d7019ada",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.0.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0fd2645d7019ada",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "327143400501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cxy-terraform-private-subnet-name"
            },
            "tags_all": {
              "Name": "cxy-terraform-private-subnet-name"
            },
            "vpc_id": "vpc-0d9e8bab19d046da1"
          },
          "dependencies": [
            "aws_vpc.cxy-terraform-vpc-section"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cxy-terraform-public-subnet-section",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:327143400501:subnet/subnet-0ef32ede3852f737f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "192.168.0.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef32ede3852f737f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "327143400501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cxy-terraform-public-subnet-name"
            },
            "tags_all": {
              "Name": "cxy-terraform-public-subnet-name"
            },
            "vpc_id": "vpc-0d9e8bab19d046da1"
          },
          "dependencies": [
            "aws_vpc.cxy-terraform-vpc-section"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cxy-terraform-vpc-section",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:327143400501:vpc/vpc-0d9e8bab19d046da1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/24",
            "default_network_acl_id": "acl-057bbc80a338b88ec",
            "default_route_table_id": "rtb-06fb275251f4f2aed",
            "default_security_group_id": "sg-09d8d9c9c65caa43d",
            "dhcp_options_id": "dopt-0f08d37bade3c3bfd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d9e8bab19d046da1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06fb275251f4f2aed",
            "owner_id": "327143400501",
            "tags": {
              "Name": "cxy-terraform-vpc-name"
            },
            "tags_all": {
              "Name": "cxy-terraform-vpc-name"
            }
          }
        }
      ]
    }
  ]
}